Added PgFacade orchestrator to monitor number of Raft nodes.