@@ -1,7 +1,6 @@
 package com.lantromipis.orchestration.service.impl;
 
 import com.lantromipis.configuration.model.PgFacadeRaftRole;
-import com.lantromipis.configuration.producers.FilesPathsProducer;
 import com.lantromipis.configuration.properties.constant.PgFacadeConstants;
 import com.lantromipis.configuration.properties.predefined.OrchestrationProperties;
 import com.lantromipis.configuration.properties.runtime.PgFacadeRuntimeProperties;
@@ -9,27 +8,23 @@ import com.lantromipis.orchestration.adapter.api.PlatformAdapter;
 import com.lantromipis.orchestration.exception.InitializationException;
 import com.lantromipis.orchestration.exception.RaftException;
 import com.lantromipis.orchestration.model.PgFacadeRaftNodeInfo;
-import com.lantromipis.orchestration.restclient.HealtcheckTemplateRestClient;
-import com.lantromipis.orchestration.restclient.model.HealtcheckResponseDto;
 import com.lantromipis.orchestration.service.api.PgFacadeRaftService;
 import com.lantromipis.orchestration.service.api.raft.PgFacadeRaftStateMachine;
 import com.lantromipis.pgfacadeprotocol.model.api.RaftGroup;
 import com.lantromipis.pgfacadeprotocol.model.api.RaftNode;
+import com.lantromipis.pgfacadeprotocol.model.api.RaftPeerInfo;
 import com.lantromipis.pgfacadeprotocol.model.api.RaftServerProperties;
 import com.lantromipis.pgfacadeprotocol.server.api.RaftEventListener;
 import com.lantromipis.pgfacadeprotocol.server.api.RaftServer;
 import com.lantromipis.pgfacadeprotocol.server.impl.RaftServerImpl;
 import io.netty.channel.nio.NioEventLoopGroup;
 import lombok.extern.slf4j.Slf4j;
-import org.eclipse.microprofile.rest.client.RestClientBuilder;
 
 import javax.enterprise.context.ApplicationScoped;
 import javax.enterprise.inject.Instance;
 import javax.inject.Inject;
-import java.net.URI;
 import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Slf4j
 @ApplicationScoped
@@ -43,9 +38,6 @@ public class PgFacadeRaftServiceImpl implements PgFacadeRaftService {
 
     @Inject
     Instance<PlatformAdapter> platformAdapter;
-
-    @Inject
-    FilesPathsProducer filesPathsProducer;
 
     @Inject
     RaftEventListener raftEventListener;
@@ -64,17 +56,13 @@ public class PgFacadeRaftServiceImpl implements PgFacadeRaftService {
             return;
         }
 
-        List<PgFacadeRaftNodeInfo> nodeInfos = platformAdapter.get().getActiveRaftNodeInfos()
+        PgFacadeRaftNodeInfo selfNodeInfo = platformAdapter.get().getSelfRaftNodeInfo();
+        List<RaftNode> raftNodes = platformAdapter.get().getActiveRaftNodeInfos()
                 .stream()
                 .sorted(
                         Comparator.comparing(PgFacadeRaftNodeInfo::getAddress)
                                 .thenComparing(PgFacadeRaftNodeInfo::getPort)
                 )
-                .toList();
-
-        PgFacadeRaftNodeInfo selfNodeInfo = platformAdapter.get().getSelfRaftNodeInfo();
-
-        List<RaftNode> raftNodes = nodeInfos.stream()
                 .map(info -> RaftNode
                         .builder()
                         .id(info.getPlatformAdapterIdentifier())
@@ -83,7 +71,7 @@ public class PgFacadeRaftServiceImpl implements PgFacadeRaftService {
                         .ipAddress(info.getAddress())
                         .build()
                 )
-                .collect(Collectors.toList());
+                .toList();
 
         RaftGroup raftGroup = RaftGroup
                 .builder()
@@ -136,19 +124,31 @@ public class PgFacadeRaftServiceImpl implements PgFacadeRaftService {
                     .ipAddress(newNodeInfo.getAddress())
                     .build();
 
-            awaitNewRaftNodeReadiness(newNodeInfo.getAddress());
-
             log.info("Adding new raft peer with ID {}", newNodeInfo.getPlatformAdapterIdentifier());
 
             raftServer.addNewNode(raftNode);
 
         } catch (RaftException e) {
-            platformAdapter.get().deleteInstance(newNodeInfo.getPlatformAdapterIdentifier());
             throw e;
         } catch (Exception e) {
-            platformAdapter.get().deleteInstance(newNodeInfo.getPlatformAdapterIdentifier());
             throw new RaftException("Failed to add new raft peer! ", e);
         }
+    }
+
+    public void removeNode(String nodeAdapterIdentifier) throws RaftException {
+        try {
+            log.info("Removing raft peer with ID {}", nodeAdapterIdentifier);
+            raftServer.removeNode(nodeAdapterIdentifier);
+        } catch (RaftException e) {
+            throw e;
+        } catch (Exception e) {
+            throw new RaftException("Failed to remove raft peer! ", e);
+        }
+    }
+
+    @Override
+    public List<RaftPeerInfo> getRaftPeersFromServer() throws RaftException {
+        return raftServer.getRaftPeers();
     }
 
     @Override
@@ -171,42 +171,6 @@ public class PgFacadeRaftServiceImpl implements PgFacadeRaftService {
         } catch (Exception e) {
             log.debug("Error while waiting for command {} with index {} to commit", command, commitIdx);
             throw new RaftException("Error while waiting for commit to complete.", e);
-        }
-    }
-
-    private void awaitNewRaftNodeReadiness(String address) {
-        URI anyDynamicUrl = URI.create("http://" + address + ":8080");
-        try (HealtcheckTemplateRestClient healtcheckRestClient = RestClientBuilder.newBuilder()
-                .baseUri(anyDynamicUrl)
-                .build(HealtcheckTemplateRestClient.class)) {
-
-            for (int i = 0; i < 500; i++) {
-                try {
-                    HealtcheckResponseDto response = healtcheckRestClient.checkReadiness();
-                    boolean raftReady = response.getChecks()
-                            .stream()
-                            .anyMatch(healthcheckItem ->
-                                    healthcheckItem.getName().equals(PgFacadeConstants.RAFT_SERVER_UP_READINESS_CHECK)
-                                            && healthcheckItem.getStatus().equals(HealtcheckResponseDto.HealtcheckStatus.UP)
-                            );
-                    if (raftReady) {
-                        return;
-                    }
-                } catch (Exception ignored) {
-                }
-
-                Thread.sleep(10);
-            }
-
-            throw new RaftException("Timout reached for new PgFacade raft server to become ready.");
-
-        } catch (RaftException e) {
-            throw e;
-        } catch (InterruptedException e) {
-            Thread.currentThread().interrupt();
-            throw new RaftException("Failed to add new raft peer! ", e);
-        } catch (Exception e) {
-            throw new RaftException("Failed to add new raft peer! ", e);
         }
     }
 }
